<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Safe Driving</string>
    <string name="app_settings">Settings</string>
    <string name="action_filter_app">Filter apps</string>
    <string name="action_share">Share</string>
    <string name="start_driving">Start driving</string>
    <string name="stop_driving">Stop driving</string>
    <string name="choose_app_to_read">Choose read apps</string>

    <string name="action_help_translate">Help to translate</string>
    <string name="action_subscribe">Subscribe</string>
    <string name="share_content">Dear, this app keep you driving more safe, please try it at https://play.google.com/store/apps/details?id=%1$s</string>


    <string name="notification_listener_name">I\'m Driving</string>
    <string name="enable_notification_service_title">Please enable notification service</string>
    <string name="enable_notification_service_content">Im Driving depends on notification service, please enable it.</string>


	<string name="test_notification_title">Welcome to I am driving</string>
	<string name="test_notification_content">Wish you a good journey</string>

    <string name="welcome_message">Welcome to safe driving, have a good journey.</string>
    <string name="bye_bye_message">Have a good time, bye.</string>


	<string name="new_notification_title_and_content">The title is %1$s and the content is %2$s</string>
	<string name="new_notification_tip">You got new notification from %1$s</string>
	<string name="new_notification_ask_if_read">Say yes to read or say no to ignore.</string>
    <string name="new_notification_ask_if_read_again">Sorry, I cannot hear clearly, could you speak again. Say yes to read or say no to ignore</string>

    <string name="new_sms_from_and_content">The short message is from %1$s and the content is %2$s</string>
    <string name="new_sms_tip">You got new short message from %1$s</string>
    <string name="new_sms_ask_if_reply">Do you want to reply, say yes to reply or say no to ignore.</string>
    <string name="new_sms_dictate_content_start">Please say your reply message.</string>
    <string name="new_sms_dictate_content_start_again">Sorry, I cannot hear clearly. Could you say your reply message again.</string>
    <string name="new_sms_ask_if_send_reply">Say yes to send the message or say no to discard.</string>
    <string name="new_sms_ask_if_send_reply_again">Sorry, I cannot hear clearly. Say yes to send your message or say no to discard.</string>
    <string name="new_sms_sent_ok">Message replied successfully.</string>
    <string name="new_sms_sent_failed">Message sent failed with problem %1$s.</string>
    <string name="new_sms_reply_content_is_empty">Sorry the reply message is empty, please say your message again.</string>
    <string name="new_sms_repeat_reply_content">The message about to send is %1$s.</string>

    <string name="speak_about_aborting">I am about aborting since hearing the command %1$s</string>
    <string name="speak_too_many_trials">Sorry, too many failed trials, bye.</string>


    <string name="settings_auto_read_summary">Automatically read new notifications.</string>
    <string name="setting_auto_read_switch_on">On</string>
    <string name="setting_auto_read_switch_off">Off</string>
    <string name="setting_speech_dictate_language">Choose language</string>
    <string name="setting_select_all">Select all</string>

    <string name="translate_introduction" translate="false">We need your help to translate our app to
        your language to secure more people driving safely. We will refund the first
        50 people who buy this app from your country after your translation. We plan to support following languages:
        Dutch, French, German, Italian, Korean, Polish, Portuguese, Russian, Spanish.</string>
    <string name="translate_contact_us">Contact Us (Email)</string>

    <string name="try_version_notify">You can use 1 hour after 7 days try, please buy unlimited version. Thanks for your support.</string>
    <string name="download_text">Download</string>
    <string name="support_us">Support us</string>
    <string name="download_text_pro">Download unlimited version</string>
</resources>
