<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <SwitchPreference android:id="@+id/app_settings_auto_read_state"
                      android:defaultValue="false"
                      android:key="app_settings_auto_read_state"
                      android:summaryOff="@string/settings_auto_read_summary"
                      android:summaryOn="@string/settings_auto_read_summary"
                      android:switchTextOn="@string/setting_auto_read_switch_on"
                      android:switchTextOff="@string/setting_auto_read_switch_off"/>
    <ListPreference android:id="@+id/app_settings_language"
                    android:entries="@array/supported_languages"
                    android:defaultValue="en_US"
                    android:title="@string/setting_speech_dictate_language"
                    android:summary="English (US)"
                    android:key="app_settings_language"
                    android:entryValues="@array/supported_languages_value"/>

    <MultiSelectListPreference android:title="@string/setting_choose_app_to_read"
                               android:key="setting_choose_app_to_read"
                               android:defaultValue="@array/empty_arrays"
                               android:entryValues="@array/empty_arrays"
                               android:entries="@array/empty_arrays"/>
</PreferenceScreen>